Updated styling to avoid clipping.

--- a/frontend/src/app/landing-page/landing-page.component.css
+++ b/frontend/src/app/landing-page/landing-page.component.css
@@ -41,23 +41,22 @@
 
 .calendars mat-card{
   margin-top: 10px;
-  padding: 20px;
   width: 100%;
-  height: 400px;
+  height: fit-content;
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 
 .calendars mat-calendar{
-  width: 100%;
+  width: 90%;
 }
 
 
 .safety-message {
   text-align: center;
-  margin-bottom: 40px;
   color: white;
+  margin-bottom: 40px;
   max-width: 700px;
 }
 
@@ -144,7 +143,6 @@ a {
    .icon-text {
      font-size: 12px;
    }
-
    /* .col {
     padding-left: 35px;
    } */
